--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </a>
       <footer>
         Coded by
-        <a href="https://linkedin.com/iryscrodrigues" target="_blank"
+        <a href="https://linkedin.com/in/iryscrodrigues" target="_blank"
           >Irys Rodrigues</a
         >
         with HTML, CSS and JavaScript.
